# terminal-type

./: Cargo.toml  README.md
src/: app.rs  config.rs  history.rs  input.rs  main.rs  stats.rs  test.rs  ui.rs  utils.rs
