[package]
name = "terminal-type"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "terminal-type"
path = "src/main.rs"

[dependencies]
# TUI and terminal handling
ratatui = "0.24"
crossterm = "0.27"

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random number generation
rand = "0.8"

# Directory utilities
dirs = "5.0"

[dev-dependencies]
# Testing utilities can be added here if needed

[profile.release]
# Optimize for size and speed
opt-level = 3
lto = true
codegen-units = 1
panic = 'abort'

[profile.dev]
# Faster compilation during development
opt-level = 0
debug = true
