[package]
name = "terminal-type"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "terminal-type"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
crossterm = "0.27"
ratatui = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
rand = "0.8"
